openshift-services/service-mesh/gateway-api/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: bookinfo-gateway-api
  namespace: bookinfo
spec:
  gatewayClassName: istio
  listeners:
  - name: http
    port: 80
    hostname: bookinfo.aws.joshgav.com
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Same
  - name: https
    port: 443
    hostname: gateway-api-bookinfo.apps.ipi.aws.joshgav.com
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: Same
    tls:
      mode: Terminate
      certificateRefs:
      - name: gateway-api-bookinfo-keypair
  - name: https-shortname
    port: 443
    hostname: bookinfo.aws.joshgav.com
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: Same
    tls:
      mode: Terminate
      certificateRefs:
      - name: gateway-api-bookinfo-keypair
